[package]
name = "pmg"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.64.0"
description = "Using a parametric model of the Galaxy to infer its parameters"
documentation = "https://github.com/paveloom-c/PMG"
readme = "README.md"
homepage = "https://github.com/paveloom-c/PMG"
repository = "https://github.com/paveloom-c/PMG"
license-file = "LICENSE.md"
keywords = ["astronomy", "simulation"]
categories = ["simulation", "command-line-utilities"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true

[dependencies]
anyhow = "=1.0.65"
autodiff = "=0.5.1"
bincode = "=1.3.3"
cfg-if = "=1.0.0"
clap = { version = "=3.2.22", features = ["derive"] }
csv = "=1.1.6"
indoc = "=1.0.7"
itertools = "=0.10.5"
num = "=0.4.0"
numeric_literals = "=0.2.0"
rand = "=0.8.5"
rand_distr = "=0.4.3"
rand_xoshiro = "=0.6.0"
serde = {version = "=1.0.145", features = ["derive"] }
simulated_annealing = "=0.2.0"
