[package]
name = "pmg"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.64.0"
description = "Using a parametric model of the Galaxy to infer its parameters"
documentation = "https://github.com/paveloom-c/PMG"
readme = "README.md"
homepage = "https://github.com/paveloom-c/PMG"
repository = "https://github.com/paveloom-c/PMG"
license-file = "LICENSE.md"
keywords = ["astronomy", "simulation"]
categories = ["simulation", "command-line-utilities"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true

[dependencies]
anyhow = "=1.0.69"
autodiff = "=0.6.0"
bincode = "=1.3.3"
cfg-if = "=1.0.0"
clap = { version = "=4.1.8", features = ["derive"] }
csv = "=1.2.1"
indoc = "=2.0.1"
itertools = "=0.10.5"
num = "=0.4.0"
numeric_literals = "=0.2.0"
rand = "=0.8.5"
rand_chacha = "=0.3.1"
rand_distr = "=0.4.3"
rayon = "=1.7.0"
serde = {version = "=1.0.153", features = ["derive"] }
simulated_annealing = "=0.2.0"
